--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -1,3 +1,6 @@
+*{
+    box-sizing: border-box;
+}
 .navbar .logo {
     font-weight: 700;
     
@@ -75,6 +78,7 @@
 }
 .cart-items .content {
     color:hsl(219, 9%, 45%);
+    padding:15px
 }
 .cart-items .content i {
     cursor: pointer;
@@ -93,4 +97,14 @@
     font-weight: bold;
     border-radius: 50%;
     color:white;
+}
+.cart-items .checkout {
+    width: 100%;
+    margin-top:20px;
+    padding:15px 10px;
+    border-radius: 10px;
+    border:none;
+    font-size:20px;
+    color:white;
+    background-color: hsl(26, 100%, 55%);
 }
